[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "resfo"
description="A (lazy) parser and writer for reservoir simulator fortran output format."
readme = "README.md"
classifiers=[
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["numpy<2"]
dynamic=["version"]

authors = [
    {name="Equinor", email="fg_sib-scout@equinor.com"},
]

maintainers = [
    {name="Eivind Jahren", email="ejah@equinor.com"},
]

[project.license]
text = "LGPL-3.0"

[project.urls]
"Homepage" = "https://github.com/equinor/resfo"
"Repository" = "https://github.com/equinor/resfo"
"Documentation" = "https://resfo.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/equinor/resfo/issues"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    "pytest",
    "hypothesis",
    "tox",
    "pre-commit"
]

[tool.setuptools_scm]
